--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Oh My Food</title>
 
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
@@ -12,18 +12,21 @@
     <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1029px)" href="css/tablet.css">
     <link rel="stylesheet" media="screen and (min-width: 1030px)" href="css/desktop.css">
 
-<main>
-
 <body>
 
-<div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loader"/></div>
+<main>
 
-  <div class="loading-container">
+<div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loader"/>
+</div>
+
+<div class="loading-container">
       
-	<header><img class="heading-image" src="images/ohmyfood.png" alt="OMF"></header>
+<header>
+    <img class="heading-image" src="images/ohmyfood.png" alt="OMF">
+</header>
 
-    <div class="location"><i class="fas fa-map-marker-alt"></i><b>Jacksonville, Florida</b>
-    </div>
+  <div class="location"><i class="fas fa-map-marker-alt"></i><b>Jacksonville, Florida</b>
+  </div>
 
       <div class="container"> 
 
@@ -36,6 +39,7 @@
                   <button id="order">Explore our restaurants</button>
 
       </div>
+
         <div class="how">
       <h2>How it works</h2>
         </div>
@@ -46,11 +50,12 @@
 	                   <button type="button" class="btn-primary"><small>3</small><i class="fas fa-store"></i>Go enjoy it at the restaurant</button>
           </div>
 
-                    <div class="restaurants">
+    <div class="restaurants">
 
-                      <div id="restaurant-text"><strong>Restaurants</strong></div>
+      <div id="restaurant-text"><strong>Restaurants</strong>
+      </div>
 
-                      <div class="restaurant-wrapper">
+        <div class="restaurant-wrapper">
 
                         <a href="menu3.html" class="restaurant-card">
                           <div class="image-container">
@@ -93,7 +98,7 @@
                         </a>
 
                         <a href="menu1.html" class="restaurant-card">
-                          <div class="image-container">
+                      <div class="image-container">
                             <img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu"> <h3>Le Gourmand</h3>
                             <p>New York</p>
 
@@ -103,9 +108,14 @@
                               </span>
                       </div>
                     </a>
-                    </div>
+        </div>
     </div>
+</div>
 
+
+</main>
+
+</body>
 
 <footer>
   <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
@@ -120,14 +130,5 @@
   <a href="mailto:abc@example.com">Legal</a>
   <a href="mailto:abc@example.com">Contact</a>
 </footer>
-
-  </div>
-
-
-
-
-</body>
-
-</main>
 
 </html>
