--- a/menu1.html
+++ b/menu1.html
@@ -4,7 +4,7 @@
 <title>Le Gourmand</title>
 
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
@@ -12,9 +12,9 @@
     <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1029px)" href="css/tablet.css">
     <link rel="stylesheet" media="screen and (min-width: 1030px)" href="css/desktop.css">
 
-<main>
-
 <body>
+
+<main>
 
 <div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loading" />
 </div>
@@ -26,12 +26,14 @@
         <div class="flex-container">
             <div><a href="index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
-        </div><img class="heading-image" src="images/ohmyfood.png" alt="OMF">
+        </div>
+        <img class="heading-image" src="images/ohmyfood.png" alt="OMF">
     </header>
         <div class="rest-image"><img class="menu-page-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
         </div>
-        <div id="background">
-            <div class="menu-container">
+
+        
+        <div class="menu-container">
 
                 <div class="restaurant-name">
                     <h1>Le Gourmand</h1>  
@@ -75,13 +77,13 @@
                             </div>
 
                         </div>
+                </div>
 
-
-            <div class="part">
-                <p>MAIN DISH</p>
-                <hr class="underline" />
-            </div>
-            <div class="nc">
+                <div class="part">
+                    <p>MAIN DISH</p>
+                    <hr class="underline" />
+                </div>
+                <div class="nc">
                         <div class="food">
                             <div class="anime">
                                     <p><strong>Roast Chicken with Provincal Herbs</strong></p>
@@ -110,13 +112,13 @@
                             <div class="check"> <i class="fa fa-check-circle"></i></div>
                             </div>
                         </div>
-            </div>
+                </div>
 
-            <div class="part">
-                <p>DESSERTS</p>
-                <hr class="underline" />
-            </div>
-            <div class="nc">
+                <div class="part">
+                    <p>DESSERTS</p>
+                    <hr class="underline" />
+                </div>
+                <div class="nc">
                         <div class="food">
                             <div class="anime">
                                     <p><strong>Assorted Dessert Plate</strong></p>
@@ -143,16 +145,11 @@
                             </div>
                         </div>
 
-            </div>
+                </div>
 
             <div id="btn-container">
                 <button type="button" id="order-btn">Order</button>
             </div>
-
-                </div>
-
-            </div>
-
 <footer>
   <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
   <a href="mailto:abc@example.com">
@@ -166,14 +163,12 @@
   <a href="mailto:abc@example.com">Legal</a>
   <a href="mailto:abc@example.com">Contact</a>
 </footer>
-    
-
-         </div>
+        </div>
 
 </div>
 
-</body>
-
 </main>
+
+</body>
 
 </html>
