--- a/menu4.html
+++ b/menu4.html
@@ -12,20 +12,27 @@
     <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1029px)" href="css/tablet.css">
     <link rel="stylesheet" media="screen and (min-width: 1030px)" href="css/desktop.css">
 
-<main>
 
 <body>
 
-<div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loading" /></div>
+<main>
+
+<div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loading" />
+</div>
 
 <div class="loading-container">
+
     <header>
         <div class="flex-container">
-                <div><a href="index.html"><i class="fas fa-arrow-left"></i></a></div>
+                <div><a href="index.html"><i class="fas fa-arrow-left"></i></a>
+                </div>
         </div><img class="heading-image" src="images/ohmyfood.png" alt="OMF">
     </header>
-        <div class="rest-image"><img class="menu-page-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant"></div>
-        <div id="background">
+
+        <div class="rest-image"><img class="menu-page-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
+        </div>
+
+        
             <div class="menu-container">
                 
                 <div class="restaurant-name">
@@ -159,14 +166,12 @@
   <a href="mailto:abc@example.com">Legal</a>
   <a href="mailto:abc@example.com">Contact</a>
 </footer>
-
-         </div>
+        </div>
 
 </div>
 
+</main>
 
 </body>
-
-</main>
 
 </html>
