last scss touch ups

--- a/index.html
+++ b/index.html
@@ -116,12 +116,10 @@
   <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
   <a href="mailto:abc@example.com">
     <i class="fas fa-utensils fa-xs footer-icon"></i>
-    <span>Suggest a Restaurant</span>
-  </a>
+    <span>Suggest a Restaurant</span></a>
   <a href="mailto:abc@example.com">
     <i class="fas fa-hands-helping fa-xs footer-icon"></i>
-    <span>Become a Partner</span>
-  </a>
+    <span>Become a Partner</span></a>
   <a href="mailto:abc@example.com">Legal</a>
   <a href="mailto:abc@example.com">Contact</a>
 </footer>
