--- a/menu2.html
+++ b/menu2.html
@@ -151,16 +151,14 @@
                 <button type="button" id="order-btn">Order</button>
             </div>
             
-        <footer>
+<footer>
   <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
   <a href="mailto:abc@example.com">
     <i class="fas fa-utensils fa-xs footer-icon"></i>
-    <span>Suggest a Restaurant</span>
-  </a>
+    <span>Suggest a Restaurant</span></a>
   <a href="mailto:abc@example.com">
     <i class="fas fa-hands-helping fa-xs footer-icon"></i>
-    <span>Become a Partner</span>
-  </a>
+    <span>Become a Partner</span></a>
   <a href="mailto:abc@example.com">Legal</a>
   <a href="mailto:abc@example.com">Contact</a>
 </footer>
