--- a/menu4.html
+++ b/menu4.html
@@ -61,8 +61,8 @@
                         <div class="food">
                                 <div class="anime">
                                     <p><strong>Grandmother's Vegetable Soup</strong></p>
-                                    <p>Carrots, parsnips & Jerusalem Artichoke</p>
-                                    <div class="price"><strong>$23</strong></div>
+                                    <p>Carrots, parsnips & <br>Jerusalem Artichoke</p>
+                                    <div class="double-price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
                             
                                 </div>
@@ -151,7 +151,7 @@
             <div id="btn-container">
                 <button type="button" id="order-btn">Order</button>
             </div>
-        </div>
+        
 
 <footer>
   <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
