--- a/menu3.html
+++ b/menu3.html
@@ -78,8 +78,8 @@
                             <div class="food">
                                 <div class="anime">
                                     <p><strong>Herb-Encrusted Steak</strong></p>
-                                    <p>With delicately sliced & seasoned vegetables</p>
-                                <div class="price"><strong>$23</strong></div>
+                                    <p>With delicately sliced <br>& seasoned vegetables</p>
+                                <div class="double-price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
                                 </div>
                             </div>
@@ -87,8 +87,8 @@
                             <div class="food">
                                 <div class="anime">
                                     <p><strong>Ox Tail Shepard's Pie</strong></p>
-                                    <p>With black truffle & pureed parsnips</p>
-                                    <div class="price"><strong>$23</strong></div>
+                                    <p>With black truffle <br>& pureed parsnips</p>
+                                    <div class="double-price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
                             <div class="food">
                                 <div class="anime">
                                     <p><strong>Chocolate Mousse</strong></p>
-                                    <p>With spices and black truffle</p><div class="price"><strong>$23</strong></div>
+                                    <p>With spices & black truffle</p><div class="price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
                                 </div>
                         
@@ -140,18 +140,16 @@
             <div id="btn-container">
                 <button type="button" id="order-btn">Order</button>
             </div>
-        </div>
+        
 
 <footer>
   <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
   <a href="mailto:abc@example.com">
     <i class="fas fa-utensils fa-xs footer-icon"></i>
-    <span>Suggest a Restaurant</span>
-  </a>
+    <span>Suggest a Restaurant</span></a>
   <a href="mailto:abc@example.com">
     <i class="fas fa-hands-helping fa-xs footer-icon"></i>
-    <span>Become a Partner</span>
-  </a>
+    <span>Become a Partner</span></a>
   <a href="mailto:abc@example.com">Legal</a>
   <a href="mailto:abc@example.com">Contact</a>
 </footer>
